# frienda

./: .env.example  .gitignore  .gitmessage.txt  .gitmodules  .ssh5  .tool-versions  AGENTS.md  CLAUDE.md  Makefile  README.md  create-low-cost-psql-client-dev.md  docker-compose.yaml  gcloud-compute-sql-client-setup-delete.md  makefile  schema.dbml
services/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.extension  Dockerfile.server  README.md  rust-toolchain.toml
services/backend/server-core/: Cargo.toml  MOBILE_GRAPHQL_CHANGE_SPEC.md  frienda-auth-test1-a490c287d01b.json  friendship-dao-firebase-adminsdk-a2w15-e1854b252a.json
services/backend/server-core/application/: Cargo.toml
services/backend/server-core/application/src/: health_check.rs  lib.rs
services/backend/server-core/application/src/services/: dsp_fetcher.rs  mod.rs  onchain_fetcher.rs  push_notification.rs  request_llm.rs  send_email.rs
services/backend/server-core/application/src/usecases/: mod.rs
services/backend/server-core/application/tests/: core.rs  mod.rs
services/backend/server-core/application/tests/artist/: get_artists_test.rs  get_members_test.rs  manage_artist_test.rs  mark_as_member_test.rs  mod.rs  request_test.rs
services/backend/server-core/application/tests/basic/: create_user_test.rs  get_all_users_test.rs  mod.rs  report_test.rs  search_user_test.rs  update_user_test.rs
services/backend/server-core/application/tests/community/: add_shortnotes_test.rs  mark_favorite_test.rs  mod.rs
services/backend/server-core/application/tests/credit/: get_credits_test.rs  mod.rs  register_credit_test.rs
services/backend/server-core/application/tests/message/: create_room_test.rs  get_messages_test.rs  get_room_list_test.rs  get_rooms_test.rs  mod.rs
services/backend/server-core/application/tests/mocks/: artist_mock.rs  email_mock.rs  exchange_prize_history_mock.rs  message_attach_mock.rs  message_room_mock.rs  mod.rs  notification_mock.rs  notification_user_mock.rs  offer_attach_mock.rs  offer_mock.rs  offer_report_mock.rs  offer_user_mock.rs  prize_mock.rs  push_notification_mock.rs  quest_mock.rs  quest_user_mock.rs  release_report_mock.rs  shortnote_mock.rs  track_credits_mock.rs  txs_fsp_mock.rs  user_artist_mock.rs  user_mock.rs  user_report_mock.rs  user_room_mock.rs
services/backend/server-core/application/tests/offer/: change_status_test.rs  get_available_offer_test.rs  get_offer_detail_test.rs  get_offer_stats_test.rs  manage_offer_test.rs  mod.rs  register_offer_test.rs  search_tasks_test.rs  update_offer_test.rs
services/backend/server-core/application/tests/point/: get_history_test.rs  get_user_balance_test.rs  mod.rs  transfer_fsp_test.rs
services/backend/server-core/application/tests/prize/: create_test.rs  exchange_prize_test.rs  get_prize_list_test.rs  get_prize_test.rs  mod.rs  update_prize_test.rs
services/backend/server-core/application/tests/quest/: create_test.rs  get_quest_test.rs  login_reward_test.rs  mark_as_done_test.rs  mod.rs
services/backend/server-core/domain/: Cargo.toml
services/backend/server-core/domain/src/: lib.rs
services/backend/server-core/domain/src/entities/: artists.rs  comments.rs  exchange_prize_history.rs  favorites.rs  gender_gen_playback.rs  indicators.rs  invitations.rs  maps.rs  message_attach.rs  messages.rs  mod.rs  news.rs  notification_channels.rs  notification_recipients.rs  notification_user.rs  notifications.rs  offer_attach.rs  offer_report.rs  offer_user.rs  offers.rs  plays_daily.rs  plays_monthly.rs  plays_yearly.rs  portfolios.rs  prelude.rs  prizes.rs  product_track.rs  products.rs  purchase_history.rs  quest_user.rs  quests.rs  raids.rs  release_report.rs  room_user.rs  rooms.rs  sea_orm_active_enums.rs  short_notes.rs  track_credits.rs  tracks.rs  txs_fsp.rs  (+6 more)
services/backend/server-core/domain/src/repositories/: artists_repo.rs  comments_repo.rs  exchange_prize_history_repo.rs  favorites_repo.rs  gender_gen_playback_repo.rs  health_check.rs  indicators_repo.rs  invitations_repo.rs  mod.rs  (+34 more)
services/backend/server-core/domain/tests/: core.rs  mod.rs  user_repo_test.rs  user_test.rs
services/backend/server-core/entities/: Cargo.toml
services/backend/server-core/entities/src/: artists.rs  maps.rs  message_room.rs  plays_monthly.rs  plays_yearly.rs  prelude.rs  product_track.rs  products.rs  rooms.rs  tracks.rs  txs_fsp.rs
services/backend/server-core/entity/: Cargo.toml
services/backend/server-core/entity/src/: comments.rs  favorites.rs  lib.rs  messages.rs  news.rs  notifications.rs  offers.rs  plays_daily.rs  quests.rs  raids.rs  sea_orm_active_enums.rs  short_notes.rs  txs_credential.rs  user_artist.rs  users.rs
services/backend/server-core/graphql/: Cargo.toml
services/backend/server-core/infrastracture/: Cargo.toml
services/backend/server-core/infrastracture/src/: lib.rs
services/backend/server-core/infrastracture/tests/: core.rs
services/backend/server-core/presentation/: Cargo.toml
services/backend/server-core/presentation/src/: lib.rs
services/backend/server-core/presentation/tests/: core.rs
services/backend/server-core/registry/: Cargo.toml
services/backend/server-core/registry/src/: lib.rs  noop.rs
services/backend/server-core/src/: auth.rs  lib.rs  main.rs
services/backend/server-core/src/scripts/: gen_models.rs  gen_schema.rs
services/backend/server-core/tests/: core.rs  graphql.rs  health_check.rs  mobile_artist_access_db.rs
services/backend/server-core/tests/common/: mod.rs
services/backend/server-extension/: Cargo.toml
services/backend/server-extension/src/: main.rs
services/backend/server-extention/: Cargo.toml
services/backend/shared/: Cargo.toml
services/backend/shared/src/: lib.rs  numeric.rs
services/backend/shared/src/db/: connect.rs  mod.rs
services/backend/shared/src/error/: app_err.rs  domain_err.rs  mod.rs
services/backend/shared/src/logger/: mod.rs
services/backend/shared/tests/: core.rs
services/pipeline/layer1/playback_aggregator/: Cargo.toml  Dockerfile
services/pipeline/layer1/playback_aggregator/src/: main.rs
(+883 files in other folders)
