[workspace]
members = [
    "server-core",
    "server-extension",
    "shared"
]
resolver = "2"

[workspace.dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
futures = "0.3.31"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing = { version = "0.1.40" }
tracing-actix-web = "0.7.14"
async-graphql = { version = "7.0.11", features = ["chrono"] }
async-graphql-actix-web = "7.0.11"
async-trait = "0.1.83"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
thiserror = "1.0.65"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
derive-new = "0.7.0"
strum = { version = "0.26.3", features = ["derive"] }
anyhow = "1.0.91"
svix = "1.38.0"
http = "1.1.0"
cloud-storage = "0.11.1"
polars = "0.43.1"
actix-web-httpauth = "0.8.2"
alcoholic_jwt = "1.0.1"
reqwest = { version = "0.12.8", features = ["json"] }
derive_more = { version = "1.0.0", features = ["full"] }
chrono = { version = "0.4.38" }
tokio = { version = "1.41.0" }

[profile.release]
opt-level = "s"
debug = false
lto = true
codegen-units = 1
strip = true
panic = "abort"
