[workspace]
members = ["server-core", "server-extension", "shared"]
resolver = "2"

[workspace.dependencies]
actix-web = "4.11.0"
actix-cors = "0.7.1"
futures = "0.3.31"
sea-orm = { version = "1.0.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "debug-print",
] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing = { version = "0.1.41" }
tracing-actix-web = "0.7.15"
async-graphql = { version = "7.0.17", features = ["chrono"] }
async-graphql-actix-web = "7.0.17"
async-trait = "0.1.83"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
thiserror = "2.0.3"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
derive-new = "0.7.0"
strum = { version = "0.26.3", features = ["derive"] }
anyhow = "1.0.91"
http = "1.1.0"
polars = "0.45.1"
actix-web-httpauth = "0.8.2"
alcoholic_jwt = "1.0.1"
reqwest = { version = "0.12.9", features = ["json"] }
derive_more = { version = "1.0.0", features = ["full"] }
chrono = { version = "0.4.38" }
tokio = { version = "1.42.0", features = ["full"] }
google-generative-ai-rs = { version = "0.3.4", features = ["beta"] }
fcm-rs = "0.2.0"
mockall = "0.14.0"
tempfile = "3.14.0"
sendgrid = "0.23.0"
sha2 = "0.10.8"
google-bigquery2 = "*"
hyper = "^0.14"
hyper-rustls = "^0.22"
yup-oauth2 = "^5.0"
base64 = "0.22.1"
alloy = { version = "0.9.2", features = ["full"] }
flate2 = "1.0.35"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = 0
debug-assertions = false
overflow-checks = false
