[package]
name = "server-core"
version = "0.1.0"
edition = "2021"
default-run = "server-core"

[dependencies]
domain = { path = "./domain" }
application = { path = "./application" }
infrastracture = { path = "./infrastracture" }
presentation = { path = "./presentation" }
shared = { path = "../shared" }
actix-web = { workspace = true }
actix-cors = { workspace = true }
futures = { workspace = true }
sea-orm = { workspace = true }
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }

[[bin]]
name = "generate-models"
path = "src/scripts/gen_models.rs"

[[bin]]
name = "generate-schemas"
path = "src/scripts/gen_schema.rs"