[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }
actix-web = { workspace = true }
futures = { workspace = true }
sea-orm = { workspace = true }
dotenvy = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = "0.4.38"
mockall = "0.13.0"
tokio = { version = "1.40.0", features = ["macros"] }
