[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }
futures = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
chrono = "0.4.38"
mockall = "0.13.0"
tokio = { version = "1.40.0", features = ["macros"] }
