[package]
name = "infrastracture"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
shared = { path = "../../shared" }
actix-web = { workspace = true }
futures = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive-new = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
google-generative-ai-rs = { workspace = true }
fcm-rs = { workspace = true }
tempfile = { workspace = true }
sendgrid = { workspace = true }
google-bigquery2 = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
alloy = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
