[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
infrastracture = { path = "../infrastracture" }
shared = { path = "../../shared" }
actix-web = { workspace = true }
futures = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }