[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
registry = { path = "../registry" }
shared = { path = "../../shared" }
actix-web = { workspace = true }
futures = { workspace = true }
sea-orm = { workspace = true }
tracing = { workspace = true }
async-graphql = { workspace = true }
async-graphql-actix-web = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
