[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
infrastracture = { path = "../infrastracture" }
domain = { path = "../domain" }
tracing = { workspace = true }
sea-orm = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }