[package]
name = "playback_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.8"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.18" }
tracing = "0.1.40"


[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
