[package]
name = "playback_aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.8"
sea-orm = { version = "1.0.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "debug-print"] }
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.18" }
tracing = "0.1.40"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
polars = "0.43.1"


[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
